--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,10 @@ variables:
   DOCKER_TLS_CERTDIR: ""
 
 
+.install_awscli: &install_awscli |
+  apk add --no-cache curl jq python3 py-pip
+  pip install awscli --upgrade
+
 ################################
 ##  CI/CD PIPELINE            ##
 ################################
@@ -15,16 +19,13 @@ stages:
 # - test
 # - "deploy to EKS"
 
-
 build-image:
   stage: build
-  image: 
-    name: amazon/aws-cli
-    entrypoint: [""]
+  image: docker
   services:
     - docker:dind
   before_script:
-    - amazon-linux-extras install docker
+    - *install_awscli
     - aws --version
     - docker --version
   script:
@@ -34,7 +35,7 @@ build-image:
   - echo ${VERSION_IMAGE_K8S}
   - aws ecr get-login-password | docker login --username AWS --password-stdin ${ECR_REPOSITORY}
   - docker pull ${ECR_REPOSITORY}:latest || true
-  - docker build -t ${VERSION_IMAGE_K8S} -t ${ECR_REPOSITORY}:latest --cache-from ${ECR_REPOSITORY}:latest --network=host -f docker/fpm.Dockerfile --target px_base --build-arg ssh_gitlab="$(cat /root/.ssh/id_rsa.gitlab)" .
+  - docker build -t ${VERSION_IMAGE_K8S} -t ${ECR_REPOSITORY}:latest -f ." .
   - docker push ${VERSION_IMAGE_K8S}
   - docker push ${ECR_REPOSITORY}:latest
   - echo "DEPLOY_VERSION=${VERSION_TAG_K8s}" >> image.env
