--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build-and-test-app:
   image: golang:alpine
   before_script:
     - apk add bash ca-certificates git gcc g++ libc-dev
-    - go --version
+    - go version
   script:
   - make build
   rules:
