Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 .install_awscli: &install_awscli |
   apk add --no-cache curl python3
   curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-  python get-pip.py pip==21.1.1
+  python3 get-pip.py pip==21.1.1
   pip install awscli --upgrade
 
 .kubectl_config: &kubectl_config
