Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,8 +73,7 @@ deploy-to-k8s-cluster:
   - *install_awscli
   - *kubectl_config
   script:
-    - cat image.env
-    - sed -i "s/ECR_REPO_IMAGE/${VERSION_IMAGE_K8S}/g" deployment.yaml
+    - sed -i "s/ECR_REPO_IMAGE/${ECR_REPOSITORY}:latest/g" deployment.yaml
     - kubectl apply -f deployment.yaml
   only:
     - main
