--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,8 @@ deploy-to-k8s-cluster:
   - echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
   - aws-iam-authenticator help
   - *kubectl_config
+  - cat /root/.kube/config
+  - aws s3 ls
   script:
     - source image.env
     - sed -i "s|ECR_REPO_IMAGE|${VERSION_IMAGE_K8S}|g" deployment.yml
