--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,17 +71,10 @@ deploy-to-k8s-cluster:
   stage: deploy
   before_script:
   - *install_awscli
-  - curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
-  - chmod +x ./aws-iam-authenticator
-  - mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
-  - echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-  - aws-iam-authenticator help
   - *kubectl_config
-  - cat /root/.kube/config
-  - aws s3 ls
   script:
     - source image.env
     - sed -i "s|ECR_REPO_IMAGE|${VERSION_IMAGE_K8S}|g" deployment.yml
-    - kubectl apply -f deployment.yaml
+    - kubectl apply -f deployment.yml
   only:
     - main
