fix: gitlab file go module build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,9 +34,8 @@ build-and-test-app:
     - apk add bash ca-certificates git gcc g++ libc-dev make
     - go version
   script:
-  - ls -la
-  - make intialize
-  - make build
+  - go mod download
+  - go build docker-gs-ping/main.go
   rules:
   - when: always
 
